--- a/settings.gradle
+++ b/settings.gradle
@@ -11,11 +11,16 @@ plugins {
 
 rootProject.name = 'project-template-parent'
 
-include 'project-template'
-include 'project-template-bom'
+include 'micronaut-build-plugin-sourcegen-bom'
+include 'micronaut-build-plugin-sourcegen-annotations'
+include 'micronaut-build-plugin-sourcegen-generator'
+include 'test-suite-common'
+include 'test-suite-gradle'
+include 'test-suite-maven'
 
 enableFeaturePreview 'TYPESAFE_PROJECT_ACCESSORS'
 
 micronautBuild {
     importMicronautCatalog()
+    importMicronautCatalog("micronaut-sourcegen")
 }
