--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
@@ -2,3 +2,10 @@ plugins {
     id 'io.micronaut.build.internal.build-plugin-sourcegen-base'
     id "io.micronaut.build.internal.module"
 }
+
+micronautBuild {
+    binaryCompatibility {
+        enabled = false
+    }
+}
+
