--- a/micronaut-build-plugin-sourcegen-bom/build.gradle
+++ b/micronaut-build-plugin-sourcegen-bom/build.gradle
@@ -2,3 +2,9 @@ plugins {
     id 'io.micronaut.build.internal.build-plugin-sourcegen-base'
     id "io.micronaut.build.internal.bom"
 }
+
+micronautBuild {
+    binaryCompatibility {
+        enabled = false
+    }
+}
