--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
@@ -3,6 +3,12 @@ plugins {
     id "io.micronaut.build.internal.module"
 }
 
+repositories {
+    maven {
+        setUrl("https://repo.gradle.org/gradle/libs-releases")
+    }
+}
+
 micronautBuild {
     binaryCompatibility {
         enabled = false
