--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-testsuite.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-testsuite.gradle
@@ -3,6 +3,12 @@ plugins {
     id("io.micronaut.build.internal.common")
 }
 
+repositories {
+    maven {
+        setUrl("https://repo.gradle.org/gradle/libs-releases")
+    }
+}
+
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
 }
