--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,10 @@ micronaut-test = "4.6.2"
 micronaut-sourcegen = "1.6.1"
 groovy = "4.0.24"
 spock = "2.3-groovy-4.0"
+gradle-plugins-api = "8.11.1"
+maven-plugin-annotations = "3.9.0"
+maven-core = "3.9.4"
+maven-plugin-testing-harness = "3.3.0"
 
 # Managed versions appear in the BOM
 # managed-somelib = "1.0"
@@ -31,6 +35,12 @@ spock = "2.3-groovy-4.0"
 # Core
 micronaut-core = { module = 'io.micronaut:micronaut-core-bom', version.ref = 'micronaut' }
 micronaut-sourcegen = { module = 'io.micronaut.sourcegen:micronaut-sourcegen-bom', version.ref = 'micronaut-sourcegen' }
+
+gradle-plugins-api = { module = 'dev.gradleplugins:gradle-api', version.ref = 'gradle-plugins-api' }
+maven-plugin-annotations = { module = 'org.apache.maven.plugin-tools:maven-plugin-annotations', version.ref = 'maven-plugin-annotations' }
+maven-plugin-api = { module = 'org.apache.maven:maven-plugin-api', version.ref = 'maven-core' }
+maven-core = { module = 'org.apache.maven:maven-core', version.ref = 'maven-core' }
+maven-plugin-testing-harness = { module = 'org.apache.maven.plugin-testing:maven-plugin-testing-harness', version.ref = 'maven-plugin-testing-harness' }
 
 #
 # Managed dependencies appear in the BOM
