--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'io.micronaut.build.internal.build-plugin-sourcegen-base'
     id "io.micronaut.build.internal.module"
+    id "org.sonatype.gradle.plugins.scan"
 }
 
 repositories {
@@ -12,6 +13,16 @@ repositories {
 micronautBuild {
     binaryCompatibility {
         enabled = false
+    }
+}
+
+String ossIndexUsername = System.getenv("OSS_INDEX_USERNAME") ?: project.properties["ossIndexUsername"]
+String ossIndexPassword = System.getenv("OSS_INDEX_PASSWORD") ?: project.properties["ossIndexPassword"]
+boolean sonatypePluginConfigured = ossIndexUsername != null && ossIndexPassword != null
+if (sonatypePluginConfigured) {
+    ossIndexAudit {
+        username = ossIndexUsername
+        password = ossIndexPassword
     }
 }
 
