--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-module.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 repositories {
+    mavenCentral()
     maven {
         setUrl("https://repo.gradle.org/gradle/libs-releases")
     }
