--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-testsuite.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.build-plugin-sourcegen-testsuite.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 repositories {
+    mavenCentral()
     maven {
         setUrl("https://repo.gradle.org/gradle/libs-releases")
     }
