Revert "Debug sonar"
This reverts commit 9a8395194c0baed087ece79348cb790a5207f59b.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -73,7 +73,7 @@ jobs:
       - name: "🔎 Run static analysis"
         if: env.SONAR_TOKEN != '' && matrix.java == '17'
         run: |
-          ./gradlew sonar --debug
+          ./gradlew sonar
 
       - name: "📊 Publish Test Report"
         if: always()
